@@ -23,6 +23,7 @@ CAY-1852 Straighten thread model and synchronization in the Modeler
 CAY-1855 Iterated and paginated queries must print result counts 
 CAY-1856 Expression.expWithParameters does not work when parameters are placed in the inline collection 
 CAY-1860 In-memory matching of DataObjects against ObjectId or int
+CAY-1861 Remove runtime relationships
 
 Bug Fixes:
 
